// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@emotion/babel-plugin-core core-with-css-import 1`] = `
"/** @jsx jsx */
import { jsx, css } from '@emotion/core'

const SomeComponent = props => (
  <div
    css={css\`
      color: hotpink;
    \`}
    {...props}
  />
)


      ↓ ↓ ↓ ↓ ↓ ↓

/** @jsx jsx */
import { jsx, css } from '@emotion/core';
var _ref = {
  name: \\"1wl9j1m\\",
  styles: \\"color:hotpink;label:SomeComponent;\\",
  label: \\"-SomeComponent\\"
};

const SomeComponent = props => <div css={_ref} {...props} />;"
`;

exports[`@emotion/babel-plugin-core jsx-hoist 1`] = `
"/** @jsx jsx */
import { jsx } from '@emotion/core'

const SomeComponent = props => (
  <div
    css={{
      color: 'hotpink'
    }}
    {...props}
  />
)


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

/** @jsx jsx */
import { jsx } from '@emotion/core';
var _ref = {
  name: \\"1wl9j1m\\",
  styles: \\"color:hotpink;label:SomeComponent;\\",
  label: \\"-SomeComponent\\"
};

const SomeComponent = props => <div css={_ref} {...props} />;"
`;

exports[`@emotion/babel-plugin-core static-object-with-camel-case 1`] = `
"/** @jsx jsx */
import { jsx } from '@emotion/core'

const SomeComponent = props => (
  <div
    css={{
      color: 'hotpink',
      backgroundColor: 'green'
    }}
    {...props}
  />
)


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

/** @jsx jsx */
import { jsx } from '@emotion/core';
var _ref = {
  name: \\"lcrht\\",
  styles: \\"color:hotpink;background-color:green;label:SomeComponent;\\",
  label: \\"-SomeComponent\\"
};

const SomeComponent = props => <div css={_ref} {...props} />;"
`;

exports[`@emotion/babel-plugin-core static-object-with-child-selectors 1`] = `
"/** @jsx jsx */

import { jsx } from '@emotion/core'

const SomeComponent = props => {
  return (
    <div
      css={{
        color: 'green',
        ':hover': {
          color: 'hotpink'
        }
      }}
      {...props}
    />
  )
}


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

/** @jsx jsx */
import { jsx } from '@emotion/core';
var _ref = {
  name: \\"1y9ypgi\\",
  styles: \\"color:green;:hover{color:hotpink;}label:SomeComponent;\\",
  label: \\"-SomeComponent\\"
};

const SomeComponent = props => {
  return <div css={_ref} {...props} />;
};"
`;
